--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
         <item>TBR</item>
     </string-array>
     <string name="submit_text">Submit</string>
+    <string name="description_text">Description</string>
     <string name="test_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
 molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
 numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
