--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -8,10 +8,16 @@
         <item>Read</item>
         <item>TBR</item>
     </string-array>
+    <string-array name="listsortspinneroptions">
+        <item>Author</item>
+        <item>Title</item>
+        <item>Date</item>
+    </string-array>
     <string name="submit_text">Submit</string>
     <string name="description_text">Description</string>
     <string name="add">Add</string>
     <string name="quotes_heading">Favourite Quotes</string>
+    <string name="sort_by_text">Sorted by</string>
     <string name="test_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
 molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
 numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
